# VMLibrary

./: .gitignore  LICENSE  README.md  arouter.gradle  arouter.gradle.kts  build.gradle  build.gradle.kts  common.gradle  common.gradle.kts  config.default.gradle  config.gradle  config.gradle.kts  gradle.properties  jitpack.yml  settings.gradle  settings.gradle.kts  vmloft.example.jks  vmloft.example.keystore
vmntools/: CMakeLists.txt  README.md  build.gradle
vmntools/src/main/: AndroidManifest.xml
vmntools/src/main/cpp/: VMCrypto.cpp  VMTestJni.cpp
vmntools/src/main/cpp/include/: VMLog.h
vmntools/src/main/res/values/: strings.xml
vmtools/: .gitignore  CMakeLists.txt  README.md  UPDATE.md  build.gradle  build.gradle.kts  proguard-rules.pro  release.gradle
vmtools/src/main/: AndroidManifest.xml
vmtools/src/main/cpp/: VMCrypto.cpp  VMCrypto.h
vmtools/src/main/jni/: Android.mk  Application.mk  vmlame.c  vmlame.h
vmtools/src/main/res/anim/: vm_bottom_in.xml  vm_bottom_out.xml  vm_fade_in.xml  vm_fade_out.xml  vm_float_menu_left_bottom_hide.xml  vm_float_menu_left_bottom_show.xml  vm_float_menu_left_top_hide.xml  vm_float_menu_left_top_show.xml  vm_float_menu_right_bottom_hide.xml  vm_float_menu_right_bottom_show.xml  vm_float_menu_right_top_hide.xml  vm_float_menu_right_top_show.xml  vm_toast_in.xml  vm_toast_out.xml  vm_top_in.xml  vm_top_out.xml
vmtools/src/main/res/animator/: vm_click_anim.xml  vm_down_in_animator.xml  vm_down_out_animator.xml  vm_toast_top_in.xml  vm_toast_top_out.xml  vm_top_in_animator.xml  vm_top_out_animator.xml
vmtools/src/main/res/color/: vm_text_accent_color.xml  vm_text_dark_color.xml  vm_text_light_color.xml
vmtools/src/main/res/drawable/: ic_add_24dp.xml  ic_arrow_back_24dp.xml  ic_close_gray.xml  ic_close_white.xml  ic_voice_record_mic_black.xml  ic_voice_record_mic_white.xml  vm_bg_circle_white.xml  vm_bg_fillet_white.xml  vm_bg_toast_green.xml  vm_bg_toast_red.xml  vm_checkbox_selector.xml  vm_click_circle_white.xml  vm_click_fillet_blue.xml  vm_click_fillet_gray.xml  vm_click_fillet_green.xml  vm_click_fillet_red.xml  vm_click_fillet_transparent.xml  vm_click_flat_transparent.xml  vm_click_full_transparent.xml  vm_click_rectangle_blue.xml  vm_click_rectangle_gray.xml  vm_click_rectangle_green.xml  vm_click_rectangle_red.xml  vm_click_rectangle_transparent.xml  vm_fillet_white.xml  vm_ic_arrow_left.xml  vm_ic_arrow_right.xml  vm_ic_camera.xml  vm_ic_check_box.xml  vm_ic_check_box_outline.xml  vm_ic_check_box_selector.xml  vm_ic_close.xml  vm_ic_close_24dp.xml  vm_ic_done_24dp.xml  vm_ic_emoticon.xml  vm_ic_emoticon_neutral.xml  vm_ic_emoticon_sad.xml  vm_ic_emotion.xml  vm_ic_emotion_sad.xml  vm_ic_eye_off.xml  (+23 more)
vmtools/src/main/res/drawable-v21/: vm_click_fillet_transparent.xml  vm_click_full_transparent_selected.xml  vm_click_rectangle_blue.xml  vm_click_rectangle_green.xml
vmtools/src/main/res/layout/: activity_pick_crop.xml  activity_pick_grid.xml  activity_pick_preview.xml  vm_activity_pick_crop.xml  vm_activity_pick_grid.xml  vm_activity_pick_preview.xml  vm_fragment_image_select.xml  vm_fragment_lazy_layout.xml  vm_image_select_item.xml  vm_pick_folder_list_item.xml  vm_pick_folder_list_window.xml  vm_pick_folder_popup.xml  vm_pick_picture_grid_camera_item.xml  vm_pick_picture_grid_item.xml  vm_pick_title_bar.xml  vm_recorder_layout.xml  vm_recorder_waveform_layout.xml  vm_widget_camera_view.xml  vm_widget_default_dialog.xml  vm_widget_edit.xml  vm_widget_float_menu.xml  vm_widget_line_view.xml  (+5 more)
(+535 files in other folders)
